Modify platformio.ini, no funcional code

--- a/Filtro pasa bajos/platformio.ini
+++ b/Filtro pasa bajos/platformio.ini
@@ -12,3 +12,7 @@
 platform = ststm32
 board = genericSTM32F103C8
 framework = arduino
+monitor_speed = 4800
+debug_tool = stlink
+upload_protocol = stlink
+build_flags = -g3 -ggdb
